Update the docs Update the sample code Login can specify if it was user initiated unlockAchievement callback's data is in event.data instead of just event.

--- a/Corona/build.settings
+++ b/Corona/build.settings
@@ -1,27 +1,21 @@
 settings =
 {
-	--[[
-	orientation = {
-		default = "portrait", 
-		supported = { "portrait", },
-		-- supported = { "landscapeLeft", "landscapeRight" },
-		-- supported = { "landscapeLeft", "landscapeRight", "portrait", "portraitUpsideDown", },
-	},
-	--]]
-
-	iphone =
+	orientation =
 	{
-		plist =
+		default = "portrait",
+		supported = { "portrait" }
+	},
+	android =
+	{
+		googlePlayGamesAppId = "" -- Your Google Play Games App Id
+	},
+	plugins =
+	{
+		-- key is the name passed to Lua's 'require()'
+		["CoronaProvider.gameNetwork.google"] =
 		{
-			-- UIApplicationExitsOnSuspend = true, -- default is false
-			CFBundleIconFile = "Icon.png",
-			CFBundleIconFiles =
-			{
-				"Icon.png", 
-				"Icon@2x.png", 
-				"Icon-72.png", 
-			},
-
+			-- required
+			publisherId = "com.coronalabs",
 		},
-	}
+	},
 }
