--- a/android/ant.properties
+++ b/android/ant.properties
@@ -15,5 +15,5 @@
 #  'key.alias' for the name of the key to use.
 # The password will be asked during the build when you use the 'release' target.
 
-#key.alias=corona
-#key.store=/Users/dannychan/corona.keystore
+key.alias=corona
+key.store=/Users/dannychan/corona.keystore
